[package]
name = "rtd-execution"
version = "0.1.0"
authors = ["LinkU Labs <eng@linkulabs.com>"]
description = "Multiplexer to choose between multiple versions of rtd and move execution crates."
license = "Apache-2.0"
publish = false
edition = "2024"

[dependencies]
rtd-protocol-config.workspace = true
rtd-types.workspace = true

move-binary-format.workspace = true
move-bytecode-verifier-meter.workspace = true
move-trace-format.workspace = true
move-vm-config.workspace = true

rtd-adapter-latest = { path = "latest/rtd-adapter" }
rtd-adapter-v0 = { path = "v0/rtd-adapter" }
rtd-adapter-v1 = { path = "v1/rtd-adapter" }
rtd-adapter-v2 = { path = "v2/rtd-adapter" }
# rtd-adapter-$CUT = { path = "$CUT/rtd-adapter" }
rtd-move-natives-latest = { path = "latest/rtd-move-natives" }
rtd-move-natives-v0 = { path = "v0/rtd-move-natives" }
rtd-move-natives-v1 = { path = "v1/rtd-move-natives" }
rtd-move-natives-v2 = { path = "v2/rtd-move-natives" }
# rtd-move-natives-$CUT = { path = "$CUT/rtd-move-natives" }
rtd-verifier-latest = { path = "latest/rtd-verifier" }
rtd-verifier-v0 = { path = "v0/rtd-verifier" }
rtd-verifier-v1 = { path = "v1/rtd-verifier" }
rtd-verifier-v2 = { path = "v2/rtd-verifier" }
# rtd-verifier-$CUT = { path = "$CUT/rtd-verifier" }

move-abstract-interpreter-latest = { path = "../external-crates/move/crates/move-abstract-interpreter", package = "move-abstract-interpreter" }
move-abstract-interpreter-v2 = { path = "../external-crates/move/move-execution/v2/crates/move-abstract-interpreter" }
# move-abstract-interpreter-$CUT = { path = "../external-crates/move/move-execution/$CUT/crates/move-abstract-interpreter" }
move-bytecode-verifier-latest = { path = "../external-crates/move/crates/move-bytecode-verifier", package = "move-bytecode-verifier" }
move-bytecode-verifier-v0 = { path = "../external-crates/move/move-execution/v0/crates/move-bytecode-verifier" }
move-bytecode-verifier-v1 = { path = "../external-crates/move/move-execution/v1/crates/move-bytecode-verifier" }
move-bytecode-verifier-v2 = { path = "../external-crates/move/move-execution/v2/crates/move-bytecode-verifier" }
# move-bytecode-verifier-$CUT = { path = "../external-crates/move/move-execution/$CUT/crates/move-bytecode-verifier" }
move-vm-runtime-latest = { path = "../external-crates/move/crates/move-vm-runtime", package = "move-vm-runtime" }
move-vm-runtime-v0 = { path = "../external-crates/move/move-execution/v0/crates/move-vm-runtime" }
move-vm-runtime-v1 = { path = "../external-crates/move/move-execution/v1/crates/move-vm-runtime" }
move-vm-runtime-v2 = { path = "../external-crates/move/move-execution/v2/crates/move-vm-runtime" }
# move-vm-runtime-$CUT = { path = "../external-crates/move/move-execution/$CUT/crates/move-vm-runtime" }
move-vm-types-latest = { path = "../external-crates/move/crates/move-vm-types", package = "move-vm-types" }
move-vm-types-v0 = { path = "../external-crates/move/move-execution/v0/crates/move-vm-types" }
move-vm-types-v1 = { path = "../external-crates/move/move-execution/v1/crates/move-vm-types" }
move-vm-types-v2 = { path = "../external-crates/move/move-execution/v2/crates/move-vm-types" }
# move-vm-types-$CUT = { path = "../external-crates/move/move-execution/$CUT/crates/move-vm-types" }

[dev-dependencies]
cargo_metadata = "0.15.4"
petgraph = "0.5.1"

[features]
default = []
tracing = [
    "rtd-adapter-latest/tracing",
    "rtd-adapter-v0/tracing",
    "rtd-adapter-v1/tracing",
  "rtd-adapter-v2/tracing",
#   "rtd-adapter-$CUT/tracing",
    "move-vm-runtime-v0/tracing",
    "move-vm-runtime-v1/tracing",
    "move-vm-runtime-latest/tracing",
  "move-vm-runtime-v2/tracing",
#   "move-vm-runtime-$CUT/tracing",
    "move-vm-config/tracing",
]
