[package]
name = "consensus-config"
version = "0.1.0"
license = "Apache-2.0"
authors = ["LinkU Labs <build@linkulabs.com>"]
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
fastcrypto.workspace = true
linku-network.workspace = true
rand.workspace = true
serde.workspace = true
shared-crypto.workspace = true

[dev-dependencies]
insta.workspace = true
