[package]
name = "consensus-simtests"
version = "0.1.0"
license = "Apache-2.0"
authors = ["LinkU Labs <build@linkulabs.com>"]
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
rtd-simulator.workspace = true
anyhow.workspace = true
arc-swap.workspace = true
consensus-config.workspace = true
consensus-core.workspace = true
consensus-types.workspace = true
linku-metrics.workspace = true
linku-network.workspace = true
parking_lot.workspace = true
prometheus.workspace = true
rtd-config.workspace = true
rtd-macros.workspace = true
rtd-protocol-config.workspace = true
tokio.workspace = true
tracing.workspace = true
typed-store.workspace = true
tempfile.workspace = true
telemetry-subscribers.workspace = true

[dev-dependencies]
rand.workspace = true
