[package]
name = "prometheus-closure-metric"
version = "0.1.0"
authors = ["Andrew Schran <aschran@linkulabs.com>"]
repository = "https://github.com/linkulabs/linku-infra"
description = "Library for a Prometheus metric that computes its value by given closure at collection time"
license = "Apache-2.0"
edition = "2024"
publish = false

[dependencies]
anyhow.workspace = true
prometheus.workspace = true
protobuf.workspace = true
