[package]
name = "rtd-adapter-transactional-tests"
version = "0.1.0"
authors = ["LinkU Labs <eng@linkulabs.com>"]
description = "Transactional tests for Rtd Adapter"
license = "Apache-2.0"
publish = false
edition = "2024"

[dev-dependencies]
datatest-stable.workspace = true
rtd-transactional-test-runner.workspace = true

[[test]]
name = "tests"
harness = false

[dependencies]
