[package]
name = "rtd-aws-orchestrator"
version = "0.0.1"
authors = ["LinkU Labs <build@linkulabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2024"

[dependencies]
aws-runtime.workspace = true
aws-sdk-ec2.workspace = true
aws-smithy-http.workspace = true
aws-smithy-runtime-api.workspace = true
russh.workspace = true
russh-keys.workspace = true
aws-config.workspace = true
color-eyre.workspace = true
clap.workspace = true
eyre.workspace = true
prettytable-rs.workspace = true
serde_json.workspace = true
futures.workspace = true
thiserror.workspace = true
reqwest.workspace = true
async-trait.workspace = true
crossterm.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["full"] }
prometheus-parse.workspace = true

linku-metrics.workspace = true
rtd-config.workspace = true
rtd-types.workspace = true
rtd-swarm-config.workspace = true

[dev-dependencies]
tempfile = "3.6.0"

[[bin]]
name = "rtd-aws-orchestrator"
path = "src/main.rs"
