[package]
name = "rtd-benchmark"
version = "0.0.0"
authors = ["LinkU Labs <build@linkulabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2024"

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
anyhow = { workspace = true, features = ["backtrace"] }
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
itertools.workspace = true
tokio = { workspace = true, features = ["full"] }
strum.workspace = true
strum_macros.workspace = true
tracing.workspace = true
clap.workspace = true
prometheus.workspace = true
rand.workspace = true
indicatif.workspace = true
duration-str.workspace = true
hdrhistogram.workspace = true
comfy-table.workspace = true
bcs.workspace = true
tokio-util.workspace = true
rtd-core.workspace = true
rtd-config.workspace = true
rtd-network.workspace = true
rtd-storage.workspace = true
rtd-types.workspace = true
rtd-sdk.workspace = true
rtd-keys.workspace = true
rtd-json-rpc-types.workspace = true
rtd-protocol-config.workspace = true
rtd-test-transaction-builder.workspace = true
rtd-swarm-config.workspace = true
rtd-surfer.workspace = true
telemetry-subscribers.workspace = true
roaring.workspace = true
regex.workspace = true
fastcrypto-zkp.workspace = true

move-core-types.workspace = true
linku-metrics.workspace = true
test-cluster.workspace = true
sysinfo.workspace = true

rtd-move-build.workspace = true

[target.'cfg(msim)'.dependencies]
rtd-framework.workspace = true
rtd-framework-snapshot.workspace = true
rtd-macros.workspace = true
rtd-simulator.workspace = true
typed-store.workspace = true
linku-common.workspace = true
