[package]
name = "rtd-bridge-cli"
version.workspace = true
authors = ["LinkU Labs <build@linkulabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2024"

[dependencies]
ethers = "2.0"
rtd-bridge.workspace = true
rtd-sdk.workspace = true
rtd-types.workspace = true
rtd-config.workspace = true
rtd-keys.workspace = true
rtd-json-rpc-types.workspace = true
shared-crypto.workspace = true
fastcrypto.workspace = true
move-core-types.workspace = true
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_json.workspace = true
telemetry-subscribers.workspace = true
reqwest.workspace = true
futures.workspace = true
