[package]
name = "rtd-bridge-indexer-alt"
version = "0.1.0"
authors = ["LinkU Labs <build@linkulabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2024"

[dependencies]
tokio.workspace = true
anyhow.workspace = true
rtd-bridge.workspace = true
rtd-bridge-schema.workspace = true
rtd-indexer-alt-framework = { workspace = true, features = ["postgres"] }
rtd-indexer-alt-metrics.workspace = true
async-trait.workspace = true
tracing.workspace = true
bcs.workspace = true
move-core-types.workspace = true
diesel.workspace = true
diesel-async.workspace = true
clap.workspace = true
url.workspace = true
linku-metrics.workspace = true
telemetry-subscribers.workspace = true
prometheus.workspace = true
serde_json.workspace = true

[[bin]]
name = "bridge-indexer-alt"
path = "src/main.rs"
