[package]
name = "rtd-bridge-indexer"
version = "0.1.0"
authors = ["LinkU Labs <build@linkulabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2024"

[dependencies]
serde.workspace = true
tap.workspace = true
diesel = { workspace = true, features = ["serde_json"] }
diesel-async = { workspace = true, features = ["bb8", "postgres"] }
ethers = { version = "2.0", features = ["rustls", "ws"] }
rayon = "1.10.0"
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
futures.workspace = true
async-trait.workspace = true
bcs.workspace = true
clap.workspace = true
linku-metrics.workspace = true
prometheus.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
strum_macros.workspace = true
rtd-bridge.workspace = true
rtd-bridge-schema.workspace = true
rtd-sdk.workspace = true
rtd-json-rpc-types.workspace = true
rtd-data-ingestion-core.workspace = true
rtd-pg-db.workspace = true
rtd-types.workspace = true
telemetry-subscribers.workspace = true
tracing.workspace = true
backoff.workspace = true
rtd-config.workspace = true
tempfile.workspace = true
rtd-indexer-builder.workspace = true

[dev-dependencies]
rtd-test-transaction-builder.workspace = true
test-cluster.workspace = true
hex-literal = "0.3.4"
rtd-indexer.workspace = true
diesel_migrations = "2.2.0"
rtd-indexer-builder = { workspace = true, features = ["test-utils"] }
rtd-bridge = { workspace = true, features = ["test-utils"] }

[[bin]]
name = "bridge-indexer"
path = "src/main.rs"
