[package]
name = "rtd-bridge"
version.workspace = true
authors = ["LinkU Labs <build@linkulabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2024"

[dependencies]
ethers = "2.0"
reqwest = {version = "0.11", default-features = false, features = [
  "json",
  "rustls-tls",
]}
tokio = { workspace = true, features = ["full"] }
rtd-types.workspace = true
rtd-authority-aggregation.workspace = true
arc-swap.workspace = true
strum_macros.workspace = true
num_enum.workspace = true
move-core-types.workspace = true
url.workspace = true
futures.workspace = true
once_cell.workspace = true
telemetry-subscribers.workspace = true
prometheus.workspace = true
async-trait.workspace = true
typed-store.workspace = true
linku-metrics.workspace = true
rtd-sdk.workspace = true
rtd-keys.workspace = true
rtd-config.workspace = true
clap.workspace = true
tracing.workspace = true
bin-version.workspace = true
bcs.workspace = true
rtd-json-rpc-types.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_json.workspace = true
eyre.workspace = true
tempfile.workspace = true
axum.workspace = true
anyhow.workspace = true
fastcrypto.workspace = true
tap.workspace = true
rand.workspace = true
shared-crypto.workspace = true
backoff.workspace = true
linku-common.workspace = true
enum_dispatch.workspace = true
rtd-json-rpc-api.workspace = true
rtd-test-transaction-builder.workspace = true
rtd-metrics-push-client.workspace = true
hex-literal = { version = "0.3.4", optional = true }
test-cluster = { workspace = true, optional = true }
rtd-sdk-types.workspace = true
rtd-rpc.workspace = true
tonic.workspace = true

[dev-dependencies]
rtd-config.workspace = true
rtd-test-transaction-builder.workspace = true
maplit = "1.0.2"

[features]
test-utils = ["hex-literal", "test-cluster"]
