[package]
name = "rtd-cost"
version = "0.1.0"
authors = ["LinkU Labs <build@linkulabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2024"

[dependencies]
rtd-types.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true
bcs.workspace = true

[dev-dependencies]
insta.workspace = true
test-cluster.workspace = true
rtd-config.workspace = true
rtd-swarm-config.workspace = true
rtd-test-transaction-builder.workspace = true
rtd-move-build.workspace = true
move-disassembler.workspace = true
rtd-json-rpc-types.workspace = true
