[package]
name = "rtd-data-ingestion-core"
authors = ["LinkU Labs <build@linkulabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2024"
version = "0.1.0"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
backoff.workspace = true
bcs.workspace = true
futures.workspace = true
linku-metrics.workspace = true
notify.workspace = true
serde.workspace = true
serde_json.workspace = true
object_store.workspace = true
prometheus.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tracing.workspace = true
rtd-storage.workspace = true
rtd-types.workspace = true
url.workspace = true
tempfile.workspace = true
tap.workspace = true
rtd-protocol-config.workspace = true
rtd-rpc-api.workspace = true
once_cell.workspace = true

[dev-dependencies]
rand.workspace = true
