[package]
name = "rtd-deepbook-indexer"
version = "0.1.0"
authors = ["LinkU Labs <build@linkulabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2024"

[dependencies]
serde.workspace = true
tap.workspace = true
diesel = { workspace = true, features = ["serde_json"] }
diesel-async = { workspace = true, features = ["bb8", "postgres"] }
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
futures.workspace = true
async-trait.workspace = true
bcs.workspace = true
clap.workspace = true
linku-metrics.workspace = true
prometheus.workspace = true
serde_yaml.workspace = true
rtd-sdk.workspace = true
rtd-json-rpc-types.workspace = true
rtd-data-ingestion-core.workspace = true
rtd-types.workspace = true
telemetry-subscribers.workspace = true
tracing.workspace = true
backoff.workspace = true
rtd-config.workspace = true
rtd-indexer-builder.workspace = true
tempfile.workspace = true
axum.workspace = true
tower-http.workspace = true
bigdecimal = { version = "0.4.5" }
serde_json = { version = "1.0", features = ["preserve_order"] }

[dev-dependencies]
hex-literal = "0.3.4"

[[bin]]
name = "deepbook-indexer"
path = "src/main.rs"
