[package]
name = "rtd-e2e-tests"
authors = ["LinkU Labs <build@linkulabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2024"
version.workspace = true

[lints]
workspace = true

[dependencies]

[dev-dependencies]
tempfile.workspace = true
futures.workspace = true
prometheus.workspace = true
indexmap.workspace = true
insta.workspace = true
itertools.workspace = true
jsonrpsee.workspace = true
test-cluster.workspace = true
rand.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
bcs.workspace = true
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
serde_json.workspace = true
reqwest.workspace = true
prost.workspace = true
tokio-stream.workspace = true

move-binary-format.workspace = true
telemetry-subscribers.workspace = true
fastcrypto.workspace = true
fastcrypto-zkp.workspace = true
move-core-types.workspace = true

linku-common.workspace = true
rtd-core.workspace = true
rtd-framework-snapshot.workspace = true
rtd-framework.workspace = true
rtd-json-rpc.workspace = true
rtd-json-rpc-api.workspace = true
rtd-node.workspace = true
rtd-macros.workspace = true
rtd-network.workspace = true
rtd-simulator.workspace = true
rtd-storage.workspace = true
linku-metrics.workspace = true
rtd-tool.workspace = true
rtd-protocol-config.workspace = true
rtd-types.workspace = true
rtd-move-build.workspace = true
rtd-swarm-config.workspace = true
rtd-swarm.workspace = true
rtd-test-transaction-builder.workspace = true
rtd-config.workspace = true
rtd-json-rpc-types.workspace = true
rtd-sdk.workspace = true
rtd-keys.workspace = true
rtd-light-client.workspace = true
rtd-rpc-api.workspace = true
rtd-rpc.workspace = true
shared-crypto.workspace = true
rtd-sdk-types.workspace = true
tonic.workspace = true
prost-types.workspace = true

passkey-types.workspace = true
passkey-client.workspace = true
passkey-authenticator.workspace = true
coset.workspace = true
url.workspace = true
p256.workspace = true
