[package]
name = "rtd-framework-tests"
version = "0.1.0"
edition = "2024"
authors = ["LinkU Labs <eng@linkulabs.com>"]
description = "Runs Move tests for rtd-framework"
license = "Apache-2.0"
publish = false

[lints]
workspace = true

[[test]]
name = "move_tests"
harness = false

[dev-dependencies]
datatest-stable.workspace = true
prometheus.workspace = true

rtd-framework.workspace = true
rtd-move.workspace = true
rtd-move-build.workspace = true
rtd-protocol-config.workspace = true
rtd-types.workspace = true

move-bytecode-verifier = { path = "../../external-crates/move/crates/move-bytecode-verifier" }
rtd-adapter = { path = "../../rtd-execution/latest/rtd-adapter", package = "rtd-adapter-latest" }
rtd-verifier = { path = "../../rtd-execution/latest/rtd-verifier", package = "rtd-verifier-latest" }

move-bytecode-verifier-meter.workspace = true
move-cli.workspace = true
move-package-alt-compilation.workspace = true
move-unit-test.workspace = true
rtd-config.workspace = true
tokio.workspace = true

[target.'cfg(msim)'.dependencies]
msim.workspace = true

[dependencies]
anyhow.workspace = true
tempfile.workspace = true
fs_extra.workspace = true
