[package]
name = "rtd-framework"
version = "0.1.0"
edition = "2024"
authors = ["LinkU Labs <eng@linkulabs.com>"]
description = "Move framework for rtd platform"
license = "Apache-2.0"
publish = false

[dependencies]
bcs.workspace = true
serde.workspace = true
once_cell.workspace = true
tracing.workspace = true

rtd-types.workspace = true

move-binary-format.workspace = true
move-core-types.workspace = true

[dev-dependencies]
anyhow.workspace = true
bcs.workspace = true
regex.workspace = true
fs_extra.workspace = true
tempfile.workspace = true

move-binary-format.workspace = true
move-compiler.workspace = true
move-package-alt-compilation.workspace = true
rtd-move-build.workspace = true
rtd-package-alt.workspace = true
rtd-config.workspace = true
tokio.workspace = true
