[package]
name = "rtd-genesis-builder"
version = "0.0.0"
authors = ["LinkU Labs <build@linkulabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bcs.workspace = true
camino.workspace = true
fastcrypto.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
rand.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
tracing.workspace = true
prometheus.workspace = true

shared-crypto.workspace = true
rtd-config.workspace = true
rtd-execution.workspace = true
rtd-framework.workspace = true
rtd-framework-snapshot.workspace = true
rtd-protocol-config.workspace = true
rtd-types.workspace = true

[dev-dependencies]
tempfile.workspace = true

[target.'cfg(msim)'.dependencies]
rtd-simulator.workspace = true
